♿️ Fix: Update contrast of red asterisk

--- a/df-shared-next/src/scss/_main.scss
+++ b/df-shared-next/src/scss/_main.scss
@@ -45,6 +45,10 @@
   color: white !important;
 }
 
+.color--required {
+  color: #ce0500;
+}
+
 .bg--orange {
   background-color: var(--salmon2);
 }
